Updated Javascript enable with more info.

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      You need to enable <a href="https://www.javascript.com/">JavaScript</a> to run this app. Available since: 1995-12-04
     </noscript>
     <div id="root"></div>
     <!--
