--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
   </svg>
 
       <strong>.NET Framework</strong>
-    </a> has been out for <strong>19 years</strong>
+    </a> has been out for <strong>20 years</strong>
   </p>
   <p data-name="ABAP">
     <a target="_blank" rel='noopener noreferrer' href="https://en.wikipedia.org/wiki/ABAP">
@@ -1822,7 +1822,7 @@
   </svg>
 
       <strong>MongoDB</strong>
-    </a> has been out for <strong>12 years</strong>
+    </a> has been out for <strong>13 years</strong>
   </p>
   <p data-name="MS-DOS">
     <a target="_blank" rel='noopener noreferrer' href="https://en.wikipedia.org/wiki/MS-DOS">
@@ -2020,7 +2020,7 @@
   </svg>
 
       <strong>pandas</strong>
-    </a> has been out for <strong>13 years</strong>
+    </a> has been out for <strong>14 years</strong>
   </p>
   <p data-name="Parcel">
     <a target="_blank" rel='noopener noreferrer' href="https://parceljs.org/">
@@ -2209,7 +2209,7 @@
   </svg>
 
       <strong>Python 1</strong>
-    </a> has been out for <strong>30 years</strong>
+    </a> has been out for <strong>31 years</strong>
   </p>
   <p data-name="Python 2">
     <a target="_blank" rel='noopener noreferrer' href="https://www.python.org/">
@@ -2461,7 +2461,7 @@
   </svg>
 
       <strong>Scala</strong>
-    </a> has been out for <strong>17 years</strong>
+    </a> has been out for <strong>18 years</strong>
   </p>
   <p data-name="Scheme">
     <a target="_blank" rel='noopener noreferrer' href="http://www.scheme-reports.org/">
@@ -2839,7 +2839,7 @@
   </svg>
 
       <strong>Vulkan</strong>
-    </a> has been out for <strong>5 years</strong>
+    </a> has been out for <strong>6 years</strong>
   </p>
   <p data-name="WebdriverIO">
     <a target="_blank" rel='noopener noreferrer' href="https://webdriver.io/">
@@ -3014,8 +3014,8 @@
   </p>
   <p data-name="Zig">
     <a target="_blank" rel='noopener noreferrer' href="https://ziglang.org/">
-        <svg class="icon" viewBox="0 0 1024 1024" transform="scale(1, 1)">
-    <path d="M576 736l96 96 320-320-320-320-96 96 224 224z" key=""></path><path d="M448 288l-96-96-320 320 320 320 96-96-224-224z" key=""></path>
+        <svg class="icon" viewBox="0 0 154 140" transform="scale(1, 1)">
+    <path d="M 46,22 28,44 19,30z" key=""></path><path d="M 46,22 33,33 28,44 22,44 22,95 31,95 20,100 12,117 0,117 0,22z" key=""></path><path d="M 31,95 12,117 4,106z" key=""></path><path d="M 56,22 62,36 37,44z" key=""></path><path d="M 56,22 111,22 111,44 37,44 56,32z" key=""></path><path d="M 116,95 97,117 90,104z" key=""></path><path d="M 116,95 100,104 97,117 42,117 42,95z" key=""></path><path d="M 150,0 52,117 3,140 101,22z" key=""></path><path d="M 141,22 140,40 122,45z" key=""></path><path d="M 153,22 153,117 106,117 120,105 125,95 131,95 131,45 122,45 132,36 141,22z" key=""></path><path d="M 125,95 130,110 106,117z" key=""></path>
   </svg>
 
       <strong>Zig</strong>
