Updated abuse link

--- a/index.html
+++ b/index.html
@@ -3064,7 +3064,7 @@
         </div>
 
         <div id="footer">
-          <p>Missing a technology? Find this repo on <a href="https://github.com/jsrn/howoldisit">GitHub</a>. Want a piece of me? Hurl abuse on <a href="https://twitter.com/zerosumjames">Twitter</a>.
+          <p>Missing a technology? Find this repo on <a href="https://github.com/jsrn/howoldisit">GitHub</a>. Want a piece of me? <a href="mailto:jsrn@hey.com">Hurl insults</a>.
           </p>
         </div>
       </main>
