add meta tags for previews

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>You want HOW MANY years experience?!</title>
+    <meta name="title" content="You want HOW MANY years experience?!"/>
+    <meta name="description" content="A tool for recruiters to check how old a technology is."/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://jsrn.net/howoldisit/"/>
+    <meta property="og:title" content="You want HOW MANY years experience?!" />
+    <meta property="og:description" content="A tool for recruiters to check how old a technology is."/>
+    <meta property="twitter:card" content="summary_large_image"/>
+    <meta property="twitter:url" content="https://jsrn.net/howoldisit/"/>
+    <meta property="twitter:title" content="You want HOW MANY years experience?!"/>
+    <meta property="twitter:description" content="A tool for recruiters to check how old a technology is."/>
   </head>
   <body>
     <noscript>
